# Portfolio

./: .gitignore  404.html  CNAME  Cargo.toml  LICENSE  README.md  Trunk.toml  build.py  diff.js  index-36aac12b27a55c0e.css  index-91936dee66129b5a.css  index-c5005bcae50ff4f5.css  index-c677f2895d82917c.css  index.css  index.html  portfolio-178987bdbce1e7ef.js  portfolio-3e593b57a389c132.js  portfolio-507685f98837a266.js  portfolio-5a76d7e8c4b5d43.js  portfolio-5e070be4e6146441.js  portfolio-6ca42845a1403d53.js  portfolio-7b0114a161aa143e.js  portfolio-8f8124dac787fa47.js  portfolio-9379dcd83895f8a9.js  portfolio-9379dcd83895f8a9_bg.wasm  portfolio-98c2bb3229aee35e.js  portfolio-a1307d54f6e129ca.js  portfolio-bfb4f7a09b22751c.js  portfolio-bfb4f7a09b22751c_bg.wasm  portfolio-cdd2c25e65d93b6a.js  portfolio-fe95e314454d780c.js  portfolio-fe95e314454d780c_bg.wasm  portfolio.js  portfolio_bg.wasm
.github/workflows/: ci.yml
css/: index.css
js/: index.js  menu.js  projects.js
js/conway/: conway.js  conway_bg.wasm
js/diff/: 1.diff.js  diff.js  diff.wasm  diff_bg.wasm
less/: index.less
src/: args.rs  cli.rs  lib.rs  projects.rs  skills.rs
src/components/: about.rs  cmd.rs  cmd_link.rs  conway.rs  differ.rs  dog.txt  history.rs  input.rs  mod.rs  projects.rs
src/components/projects/: project_group.rs
src/components/projects/project_group/: project.rs
src/utils/: ansi_html.rs  autocomplete.rs  conway.rs  conway_.rs  diff.rs  game.rs  history_store.rs  mod.rs
static/: index.html  portfolio.js  portfolio_bg.wasm
static/js/: index.js
static/js/diff/: diff.js
