[package]
name = "portfolio"
version = "0.1.0"
authors = ["benhall-7 <benjaminjahall@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
diff-struct = "0.3"
lazy_static = "1"
ndarray = "0.13"
regex = "1"
yew = "0.17"
wasm-bindgen = "0.2.63"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
] }
clap = { version = "4.5.28", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
