[package]
name = "portfolio"
version = "0.1.0"
authors = ["benhall-7 <benjaminjahall@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
diff-struct = "0.3"
lazy_static = "1"
ndarray = "0.13"
regex = "1"
yew = {version = "0.21", features = ["csr"]}
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
] }
clap = { version = "4.5.28", features = ["derive"] }
wasm-bindgen = "0.2.100"
gloo = "0.11.0"
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
